[project]
name = "Vapory"
version = "0.1.2"
description = "3D rendering with Python and POV-Ray"
authors = [
    {name = "Zulko",email = "https://github.com/Zulko"},
    {name = "Zulko"},
]
dependencies = ["numpy>=2.5.0", "ipython>=9.15.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "see LICENSE.txt"}
keywords = ["3D POV-Ray Photo-realistic ray-tracing"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-q",
    "--cov=src",           # measure coverage for all packages
    "--cov-report=term:skip-covered",        # terminal report
    "--cov-report=html",        # HTML report (htmlcov/)
    "--cov-fail-under=70",      # fail if below 70%
    "--no-cov-on-fail",
]
log_cli_level = "ERROR"
log_format = "%%(asctime)s %%(levelname)s %%(message)s"
log_date_format = "%%Y-%%m-%%d %%H:%%M:%%S"
cache_dir = ".cache"

markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage]
# Only include the package source, exclude tests
source = ["src"]
# Exclude any files you don't want to count (e.g., __init__.py, test helpers)
omit = ["*/tests/*", "*/__pycache__/*"]
